--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pelaporan_safety
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=dbwebsafety
+DB_USERNAME=admin
+DB_PASSWORD=kasdj2349
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
