--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dbwebsafety
 DB_USERNAME=admin
-DB_PASSWORD=kasdj2349
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
